--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --foreground-rgb: 0, 0, 0;
 }
 
@@ -10,9 +10,14 @@
   :root {
     --foreground-rgb: 255, 255, 255;
   }
-} */
+}
 
 body {
-  /* color: rgb(var(--foreground-rgb)); */
-  padding: 1rem;
+  color: rgb(var(--foreground-rgb));
+}
+
+@layer base {
+  h1 {
+    @apply font-extrabold mb-3 text-2xl;
+  }
 }
